# typezero

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  package-lock.json  tutorial.md
backend/: config.json  events.js  friendbot.js  index.js  package-lock.json  package.json  prompt.js  prover.js  server.js
backend/test/: friendbot.test.js  prompt.test.js  prove.test.js
contracts/leaderboard/: Cargo.toml
contracts/leaderboard/src/: lib.rs
docs/: spec.md
frontend/: app.mjs  dev.js  index.html  lint.js  package-lock.json  package.json  styles.css  test.js
frontend/src/: replay.mjs  timing.mjs
prompts/: 01.md  02.md  03.md  04.md  05.md
risc0/typing_proof/host/: Cargo.toml
risc0/typing_proof/host/src/: lib.rs  main.rs
risc0/typing_proof/methods/: Cargo.toml
risc0/typing_proof/methods/guest/: Cargo.toml
risc0/typing_proof/methods/guest/src/: main.rs
scripts/: deploy-testnet.mjs  e2e-smoke.mjs
shared/: replay.ts  rules.md
