[package]
name = "leaderboard"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "25.0.2"
sep-41-token = "1.4.0"
soroban-fixed-point-math = "1.5.0"
blend-contract-sdk = "2.25.0"
stellar-tokens = "0.6.0"
stellar-access = "0.6.0"
stellar-contract-utils = "0.6.0"
stellar-macros = "0.6.0"
stellar-accounts = "0.6.0"

[profile.release]
opt-level = "z"
codegen-units = 1
lto = true
